--- a/web/src/components/LoginBox/styles.module.scss
+++ b/web/src/components/LoginBox/styles.module.scss
@@ -1,4 +1,4 @@
-.LoginBoxWrapper {
+.loginBoxWrapper {
   height: 100vh;
   width: 100%;
   background: #17171a url(../../assets/banner-girl.png) no-repeat center top;
